--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "loba": "^1.0.0",
     "mongoose": "^8.2.2",
     "next": "14.0.4",
     "react": "^18",
